results/run_bfs.546623.txt
bfs2.cc: In function 'int64_t SHMEM_TDStep(const Graph&, pvector<int>&, SlidingQueue<int>&, long int*, long int*, long long int*, Partition<int>)':
bfs2.cc:88:5: error: 'q_iter' was not declared in this scope; did you mean 'Writer'?
   88 |     q_iter++;
      |     ^~~~~~
      |     Writer
bfs2.cc: In function 'pvector<int> DOBFS(const Graph&, NodeID, long int*, long long int*, long int*, int, int)':
bfs2.cc:143:45: error: no matching function for call to 'SlidingQueue<int>::SlidingQueue(int&)'
  143 |   SlidingQueue<NodeID> frontier(vp.max_width);          // Partitioned symmetric queue
      |                                             ^
In file included from bfs2.cc:14:
sliding_queue.h:32:12: note: candidate: 'SlidingQueue<T>::SlidingQueue(size_t, long int*) [with T = int; size_t = long unsigned int]'
   32 |   explicit SlidingQueue(size_t shared_size, long* QLOCK) : QLOCK_(QLOCK), shared_size_(shared_size) {
      |            ^~~~~~~~~~~~
sliding_queue.h:32:12: note:   candidate expects 2 arguments, 1 provided
sliding_queue.h:22:7: note: candidate: 'constexpr SlidingQueue<int>::SlidingQueue(const SlidingQueue<int>&)'
   22 | class SlidingQueue {
      |       ^~~~~~~~~~~~
sliding_queue.h:22:7: note:   no known conversion for argument 1 from 'int' to 'const SlidingQueue<int>&'
bfs2.cc:144:7: error: 'pe' was not declared in this scope
  144 |   if (pe == 0)
      |       ^~
In file included from util.h:11,
                 from graph.h:14,
                 from generator.h:13,
                 from builder.h:17,
                 from benchmark.h:14,
                 from bfs2.cc:7:
bfs2.cc:156:32: error: no match for 'operator*' (operand type is 'SlidingQueue<int>')
  156 |       TIME_OP(t, QueueToBitmap(*frontier, front, pWrk, pSync));
      |                                ^~~~~~~~~
timer.h:51:38: note: in definition of macro 'TIME_OP'
   51 | #define TIME_OP(t, op) { t.Start(); (op); t.Stop(); }
      |                                      ^~
In file included from /users/bwilliams/capulin/ompi/build/include/shmem.h:23,
                 from pvector.h:9,
                 from tournament.h:6,
                 from builder.h:15,
                 from benchmark.h:14,
                 from bfs2.cc:7:
/opt/gcc/10.2.0/snos/include/g++/complex:391:5: note: candidate: 'template<class _Tp> std::complex<_Tp> std::operator*(const std::complex<_Tp>&, const std::complex<_Tp>&)'
  391 |     operator*(const complex<_Tp>& __x, const complex<_Tp>& __y)
      |     ^~~~~~~~
/opt/gcc/10.2.0/snos/include/g++/complex:391:5: note:   template argument deduction/substitution failed:
In file included from util.h:11,
                 from graph.h:14,
                 from generator.h:13,
                 from builder.h:17,
                 from benchmark.h:14,
                 from bfs2.cc:7:
bfs2.cc:156:33: note:   'SlidingQueue<int>' is not derived from 'const std::complex<_Tp>'
  156 |       TIME_OP(t, QueueToBitmap(*frontier, front, pWrk, pSync));
      |                                 ^~~~~~~~
timer.h:51:38: note: in definition of macro 'TIME_OP'
   51 | #define TIME_OP(t, op) { t.Start(); (op); t.Stop(); }
      |                                      ^~
In file included from /users/bwilliams/capulin/ompi/build/include/shmem.h:23,
                 from pvector.h:9,
                 from tournament.h:6,
                 from builder.h:15,
                 from benchmark.h:14,
                 from bfs2.cc:7:
/opt/gcc/10.2.0/snos/include/g++/complex:400:5: note: candidate: 'template<class _Tp> std::complex<_Tp> std::operator*(const std::complex<_Tp>&, const _Tp&)'
  400 |     operator*(const complex<_Tp>& __x, const _Tp& __y)
      |     ^~~~~~~~
/opt/gcc/10.2.0/snos/include/g++/complex:400:5: note:   template argument deduction/substitution failed:
In file included from util.h:11,
                 from graph.h:14,
                 from generator.h:13,
                 from builder.h:17,
                 from benchmark.h:14,
                 from bfs2.cc:7:
bfs2.cc:156:33: note:   'SlidingQueue<int>' is not derived from 'const std::complex<_Tp>'
  156 |       TIME_OP(t, QueueToBitmap(*frontier, front, pWrk, pSync));
      |                                 ^~~~~~~~
timer.h:51:38: note: in definition of macro 'TIME_OP'
   51 | #define TIME_OP(t, op) { t.Start(); (op); t.Stop(); }
      |                                      ^~
In file included from /users/bwilliams/capulin/ompi/build/include/shmem.h:23,
                 from pvector.h:9,
                 from tournament.h:6,
                 from builder.h:15,
                 from benchmark.h:14,
                 from bfs2.cc:7:
/opt/gcc/10.2.0/snos/include/g++/complex:409:5: note: candidate: 'template<class _Tp> std::complex<_Tp> std::operator*(const _Tp&, const std::complex<_Tp>&)'
  409 |     operator*(const _Tp& __x, const complex<_Tp>& __y)
      |     ^~~~~~~~
/opt/gcc/10.2.0/snos/include/g++/complex:409:5: note:   template argument deduction/substitution failed:
In file included from util.h:11,
                 from graph.h:14,
                 from generator.h:13,
                 from builder.h:17,
                 from benchmark.h:14,
                 from bfs2.cc:7:
bfs2.cc:156:33: note:   candidate expects 2 arguments, 1 provided
  156 |       TIME_OP(t, QueueToBitmap(*frontier, front, pWrk, pSync));
      |                                 ^~~~~~~~
timer.h:51:38: note: in definition of macro 'TIME_OP'
   51 | #define TIME_OP(t, op) { t.Start(); (op); t.Stop(); }
      |                                      ^~
bfs2.cc:163:60: error: 'pe' was not declared in this scope
  163 |         awake_count = SHMEM_BUStep(g, parent, front, curr, pe, npes, pWrk, pSync, vp);
      |                                                            ^~
bfs2.cc:163:64: error: 'npes' was not declared in this scope
  163 |         awake_count = SHMEM_BUStep(g, parent, front, curr, pe, npes, pWrk, pSync, vp);
      |                                                                ^~~~
In file included from util.h:11,
                 from graph.h:14,
                 from generator.h:13,
                 from builder.h:17,
                 from benchmark.h:14,
                 from bfs2.cc:7:
bfs2.cc:168:67: error: 'pe' was not declared in this scope
  168 |       TIME_OP(t, BitmapToQueue(g, front, frontier, FRONTIER_LOCK, pe, npes));
      |                                                                   ^~
timer.h:51:38: note: in definition of macro 'TIME_OP'
   51 | #define TIME_OP(t, op) { t.Start(); (op); t.Stop(); }
      |                                      ^~
bfs2.cc:168:71: error: 'npes' was not declared in this scope
  168 |       TIME_OP(t, BitmapToQueue(g, front, frontier, FRONTIER_LOCK, pe, npes));
      |                                                                       ^~~~
timer.h:51:38: note: in definition of macro 'TIME_OP'
   51 | #define TIME_OP(t, op) { t.Start(); (op); t.Stop(); }
      |                                      ^~
===============Test 1 Complete!===============
===============Test 2 Complete!===============
===============Test 3 Complete!===============
===============Test 4 Complete!===============
===============Test 5 Complete!===============
===============Test 6 Complete!===============
===============Test 9 Complete!===============
===============Test 10 Complete!===============
